--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li></li>
         <li></li>
         <li></li>   
+        <li><a href="lesson.html">XX - Lesson</a></li>   
     </ul>
     
 </body>
