--- a/circle.html
+++ b/circle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <title>22 - JS Tasks</title>
+    <title>Circle Area</title>
 </head>
 <body>
     
@@ -13,7 +13,7 @@
     <h1>Type a radius of the circle:</h1>
     <form id="counter">
         <input type="number" id="radius" required>
-        <button type="submit" id="submit">Submit</button>
+        <button type="button" onclick="calculate()">Submit</button>
     </form>
     
 
