--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="hello.html">01 - Hello, Username</a></li>
         <li><a href="age.html">02 - Your Age</a></li>
         <li><a href="square.html">03 - Your Square Perimeter</a></li>
-        <li></li>
+        <li><a href="circle.html">04 - Circle</a></li>
         <li></li>
         <li></li>
         <li></li>
