--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <li><a href="age.html">02 - Your Age</a></li>
         <li><a href="square.html">03 - Your Square Perimeter</a></li>
         <li><a href="circle.html">04 - Circle</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="speed.html">05 - Speed</a></li>
+        <li><a href="convert.html">06 - Convert</a></li>
+        <li><a href="flash.html">07 - Flash</a></li>
+        <li><a href="choko.html">08 - Choko</a></li>
         <li></li>
         <li></li>   
         <li><a href="lesson.html">XX - Lesson</a></li>   
