--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <ul>
         <li><a href="hello.html">01 - Hello, Username</a></li>
-        <li><a href="age.html">02 - Your Age</a></li>
-        <li><a href="square.html">03 - Your Square Perimeter</a></li>
+        <li><a href="age.html">02 - Age</a></li>
+        <li><a href="square.html">03 - Square</a></li>
         <li><a href="circle.html">04 - Circle</a></li>
         <li><a href="speed.html">05 - Speed</a></li>
         <li><a href="convert.html">06 - Convert</a></li>
         <li><a href="flash.html">07 - Flash</a></li>
         <li><a href="choko.html">08 - Choko</a></li>
-        <li></li>
-        <li></li>   
-        <li><a href="lesson.html">XX - Lesson</a></li>   
+        <li><a href="digits.html">09 - Digits</a></li>
+        <li><a href="deposit.html">10 - Deposit</a></li>   
+        <!-- <li><a href="lesson.html">XX - Lesson</a></li>    -->
     </ul>
     
 </body>
